--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ button:hover {
 <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
 
 <input type=hidden name="oid" value="00DDm000000HePL">
-<input type=hidden name="retURL" value="http://https://www.kcsa.co.za/">
+<input type=hidden name="retURL" value="http://https://www.kcsa.co.za">
 
 <!--  ----------------------------------------------------------------------  -->
 <!--  NOTE: These fields are optional debugging elements. Please uncomment    -->
